Fixed issues with Git repos on bottom of main page
Introduced a min-height requirement for the git repo boxes to make them
all even. These do *not* work when the screen is very very narrow, but
that is an edge case I'm willing to ignore for now. Otherwise, it
doesn't look bad at the other bootstrap size cases.

Added links to git repos for both the titles and the images. It was
previously just links on the images.

Also added an entry for the website repo, so now we look super
sexy with the scrolling repos!

--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -1235,7 +1235,9 @@ span.nav-close:before { content: "\f00d"; }
 	-webkit-border-radius: 0px 0px 4px 4px;
     -moz-border-radius: 0px 0px 4px 4px;
    	border-radius: 0px 0px 4px 4px;
+	min-height: 145px;
 }
+
 .slider-title:after {
 	top:100%;
 	border: solid transparent;
@@ -1243,6 +1245,7 @@ span.nav-close:before { content: "\f00d"; }
 	height: 0; width: 0;
 	position: absolute;
 	pointer-events: none;
+	min-height: 145px;
 }
 .slider-title:after { border-width: 6px; left: 47%; }
 .slider-title h3 { font-size: 12px; letter-spacing:0.1em; font-weight: 700; text-transform: uppercase; margin-bottom: 2px;}
